# akita_pytorch

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  akita_tf_summary.txt  check_cool_file.ipynb  check_finetuning_loss.ipynb  check_layers.ipynb  check_processed_data.ipynb  check_tuning.ipynb  compare_weights.ipynb  create_cool_files.sh  create_example_predictions.ipynb  create_target.ipynb  environment.yml  finetune_v2_model.py  finetune_v2_model.sh  finetune_v2_model_new.sh  finetune_v2_model_new_cell_type.py  finetune_v2_model_new_cell_type.sh  finetune_v2_model_optuna.py  finetune_v2_model_optuna.sh  load_weights.ipynb  model.pth  model.py  model_v2_compatible.py  model_v2_horiz_checkpoint.py  modules.py  optuna_shuffled_ratio.db  optuna_shuffled_ratio_tuning.csv  preprocessing_data.ipynb  preprocessing_data.py  preprocessing_data_parallel.py  preprocessing_data_parallel.sh  pyproject.toml  qodana.yaml  qodana.yml  requirements.txt  ruff.toml  test.ipynb  (+14 more)
.github/workflows/: qodana.yml  ruff.yml
akita/: __init__.py  model.py  modules.py
akita_model/: __init__.py  model.py  modules.py
benchmarking/evaluation/: akita_benchmark.py  alphagenome_benchmark.py  orca_benchmark.py
benchmarking/test_sets/: alphagenome_human_safe_windows.tsv  alphagenome_mouse_safe_windows.tsv
benchmarking/test_sets_construction/: build_benchmark_test_set.py  build_safe_test_windows.py
data_preprocessing/: __init__.py  create_cool_files.sh  dataset.py  preprocessing_data_parallel.py  preprocessing_data_parallel.sh  visualize_training_data.ipynb
evaluation/: evaluate_model.ipynb  evaluate_model_HFF.ipynb  evaluate_model_mESC.ipynb
evaluation/internal/: evaluate_model.ipynb
finetuning/: analyze_finetuning_loss.ipynb  finetune_model.py  finetune_model.sh
tests/: __init__.py  test_utils.py
training/: __init__.py  train_model.py  training_utils.py
utils/: __init__.py  analysis_utils.py  data_utils.py  visualization_utils.py
weight_transfer/: transfer_tf_to_torch.py  transfer_tf_to_torch_human.py  transfer_tf_to_torch_mouse.py
workflows/finetuning/: analyze_finetuning_loss.ipynb  finetune_model.py  (+1 more)
(+108 files in other folders)
